<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/String1"
        android:gravity="center"
        android:textSize="@dimen/normal_padding"
        android:background="@color/firstBar"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp" />

    <!-- Délimitateur -->


        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="48dp">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bonjour"
                    android:layout_gravity="center"
                    android:textSize="@dimen/big_text_size" />

                <TextView
                    android:id="@+id/email_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_mail"
                    android:textSize="@dimen/big_text_size" />
        <!--    <TextView
                    android:id="@+id/password_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/hint_pass"
                    android:textSize="@dimen/big_text_size" />
         -->
            </TableRow>

        </TableLayout>



    <!-- Délimitateur -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/black"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="96dp" />
    <!-- Fin Délimitateur -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/loggedString1"
        android:gravity="center"
        android:textSize="@dimen/big_text_size"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="116dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playedmatch"
        android:id="@+id/button0"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
         />

    <ListView
        android:id="@+id/currentmatch"
        android:scrollbars="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="164dp"
        android:layout_above="@+id/button0">
    </ListView>

    <!-- Délimitateur -->
   <!-- <TableRow
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/black"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="1134dp" />-->






</RelativeLayout>